<resources>
    <string name="app_name">Goshawk</string>
    <string name="action_settings">Settings</string>
    <string name="whosHomeDefault">nobody</string>
    <string name="systemActivate">Armed</string>
    <string name="systemDeactivate">Disarmed</string>
    <string name="notificationSwitch">Notification</string>
    <string name="snapshotSwitch">Get snapshot</string>
    <string name="ServerIP">Server IP:</string>
    <string name="DefaultServerIP">Please Enter Server IP:</string>

    <string name="Login">Login</string>
    <string name="title_activity_main_screen">GOSHAWK</string>
    <string name="settings">Settings</string>
    <string name="events">Events</string>
    <string name="addacount">Add Account</string>
    <string name="snapshot">Get snapshot</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_setings">SetingsActivity</string>


    <string name="settingFile">Goshawk.settingFile.privteMode</string>
    <string name="title_activity_event">Events</string>
    <string name="title_activity_add_user">Add Account</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This Name is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed"</string>
    <string name="aut_title">"Choose permission:"</string>


</resources>
